# tddcourse

./: .gitignore  README.md  change_log
apache2/: default
course/: course.txt  readme.abw  wordpress_custom.css
course/plantuml/: 100_InsideOutVsOutsideIn.txt  200_TestDoubles.txt  300_MockObjects.txt  400_WordsrepClassFileInterfaceInteractions  400_WordsrepClassFileInterfaceInteractions.txt
reference/WordsrepApp/: .cproject  CMakeLists.txt
reference/WordsrepApp/interface/: AbstractFileReaderInterface.h  AbstractFileWriterInterface.h  AbstractLineToWordsInterface.h  AbstractWordsToLineInterface.h
reference/WordsrepApp/mock/: FileWriterMock.h  LineToWordsMock.h  WordsToLineMock.h
reference/WordsrepApp/src/: ArgumentParserClass.cpp  ArgumentParserClass.h  CMakeLists.txt  FileReaderClass.cpp  FileReaderClass.h  FileWriterClass.cpp  FileWriterClass.h  LineToWordsClass.cpp  LineToWordsClass.h  WordsToLineClass.cpp  WordsToLineClass.h  WordsrepClass.cpp  WordsrepClass.h  main.cpp
reference/WordsrepApp/test/: ArgumentParserClassTest.cpp  CMakeLists.txt  LineToWordsClassTest.cpp  WordsToLineClassTest.cpp  WordsrepClassTest.cpp  main.cpp
reference/WordsrepAppJacob/: .cproject  .project
reference/WordsrepAppJacob/Debug/: WordsrepAppJacob  makefile  sources.mk
reference/WordsrepAppJacob/Debug/.metadata/.plugins/org.eclipse.cdt.make.core/: subdir.mk
reference/WordsrepAppJacob/Debug/src/: ArgumentParserClass.d  FileReaderClass.d  FileWriterClass.d  LineToWordsClass.d  WordsToLineClass.d  WordsrepClass.d  subdir.mk
reference/WordsrepAppJacob/Debug/test/: ArgumentParserClassTest.d  LineToWordsClassTest.d  WordsToLineClassTest.d  WordsrepClassTest.d  main.d  subdir.mk
reference/WordsrepAppJacob/interface/: AbstractFileReaderInterface.h  AbstractFileWriterInterface.h
reference/WordsrepAppJacob/mock/: FileWriterMock.h
reference/WordsrepAppJacob/src/: ArgumentParserClass.cpp  ArgumentParserClass.h  FileReaderClass.h  FileWriterClass.h  LineToWordsClass.h  WordsToLineClass.h  WordsrepClass.cpp
reference/WordsrepAppJacob/test/: WordsToLineClassTest.cpp  WordsrepClassTest.cpp
reference/WordsrepAppReference/: .cproject  .project
reference/WordsrepAppReference/mock/: FileReaderMock.h
reference/WordsrepAppReference/src/: FileWriterClass.cpp  LineToWordsClass.cpp  WordsrepClass.h
reference/WordsrepAppReference/test/: ArgumentParserClassTest.cpp  LineToWordsClassTest.cpp  main.cpp
reference/section10/WordsrepApp/: .cproject
reference/section10/WordsrepApp/src/: ArgumentParserClass.h  CMakeLists.txt  WordsToLineClass.cpp  WordsToLineClass.h
reference/section10/WordsrepApp/test/: CMakeLists.txt
reference/section11/WordsrepApp/src/: CMakeLists.txt  WordsToLineClass.cpp  WordsToLineClass.h
reference/section11/WordsrepApp/test/: CMakeLists.txt  WordsToLineClassTest.cpp
reference/section12/WordsrepApp/src/: CMakeLists.txt  WordsrepClass.cpp  WordsrepClass.h
reference/section12/WordsrepApp/test/: CMakeLists.txt  LineToWordsClassTest.cpp
reference/section13/WordsrepApp/: CMakeLists.txt
reference/section13/WordsrepApp/src/: LineToWordsClass.h  WordsrepClass.cpp  WordsrepClass.h
reference/section13/WordsrepApp/test/: CMakeLists.txt  WordsrepClassTest.cpp
reference/section13/WordsrepApp/test/mock/: FileReaderMock.h  FileWriterMock.h
reference/section14/WordsrepApp/interface/: AbstractFileReaderInterface.h
reference/section14/WordsrepApp/src/: CMakeLists.txt  LineToWordsClass.cpp  WordsrepClass.h
reference/section14/WordsrepApp/test/: WordsrepClassTest.cpp
reference/section15/WordsrepApp/: CMakeLists.txt
reference/section15/WordsrepApp/src/: ArgumentParserClass.cpp  CMakeLists.txt  FileWriterClass.cpp  LineToWordsClass.cpp  WordsrepClass.cpp
reference/section15/WordsrepApp/test/: DummyTest.cpp
reference/section17/WordsrepApp/: .cproject  .project  CMakeLists.txt
reference/section17/WordsrepApp/interface/: AbstractFileWriterInterface.h
reference/section17/WordsrepApp/src/: ArgumentParserClass.h  CMakeLists.txt  FileReaderClass.cpp  FileWriterClass.h  LineToWordsClass.cpp  LineToWordsClass.h  WordsToLineClass.cpp  WordsToLineClass.h  main.cpp
reference/section17/WordsrepApp/test/: ArgumentParserClassTest.cpp  CMakeLists.txt  LineToWordsClassTest.cpp  WordsToLineClassTest.cpp  WordsrepClassTest.cpp
reference/section5/WordsrepApp/: .cproject
reference/section6/WordsrepApp/: CMakeLists.txt
reference/section6/WordsrepApp/test/: CMakeLists.txt  main.cpp
reference/section7/WordsrepApp/: .project  CMakeLists.txt
reference/section7/WordsrepApp/test/: CMakeLists.txt
reference/section9/WordsrepApp/: CMakeLists.txt
reference/section9/WordsrepApp/src/: CMakeLists.txt
reference/section9/WordsrepApp/test/: CMakeLists.txt
scripts/: install_tddcourse.sh
